index.html style.css 更新

--- a/index.html
+++ b/index.html
@@ -10,11 +10,43 @@
 </head>
 <body>
     <header>
-        <h1 class="blockheader">
+        <h1 class="brockheader">
             <a href="">
                 <span class="color_green">P</span>ortfolio
             </a>
         </h1>
     </header>
+    <!-- profile -->
+    <div class="brockmain">
+        <!-- profile -->
+        <div class="profile">
+            <h2　class="subtitle">
+                <span class="color_green">P</span>rofile
+            </h2>
+            <div class="itemlist">
+                <img src="img/profile.png" alt="profile画像">
+                <b>pdmvmbq</b>
+                <p class="color_green">HTML / CSS / PHP / MySQL / Laravel / Adbe XD</p>
+                <p>ここにテキストが入りますここにテキストが入ります</p>
+            </div>    
+            <ul class="iconlist">
+                <li>
+                    <a href="">
+                        <img src="img/twitter.png" alt="twitter画像">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="img/github.png" alt="github画像">
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <!-- works -->
+        <div class="works">
+
+        </div>
+
+    </div>
 </body>
 </html>
