works footer 追加

--- a/index.html
+++ b/index.html
@@ -44,9 +44,45 @@
         </div>
         <!-- works -->
         <div class="works">
-
+            <h2 class="subtitle">
+                <span class="color_green">W</span>orks
+            </h2>
+            <ul class="workslist">
+                <li>
+                    <img src="img/work_1.png" alt="twitterクローンの画像">
+                    <h3>twitterクローン</h3>
+                    <span>html/css/php/mysql</span>
+                    <div class="link">
+                        <a href="">webサイト</a>
+                        <a href="">github</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/work_2.png" alt="twitterクローンの画像">
+                    <h3>twitterクローン</h3>
+                    <span>html/css/php/mysql</span>
+                    <div class="link">
+                        <a href="">webサイト</a>
+                        <a href="">github</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="img/work_3.png" alt="twitterクローンの画像">
+                    <h3>twitterクローン</h3>
+                    <span>html/css/php/mysql</span>
+                    <div class="link">
+                        <a href="">webサイト</a>
+                        <a href="">github</a>
+                    </div>
+                </li>
+            </ul>
         </div>
 
     </div>
+
+    <!-- footer　タグ -->
+    <footer class="blockfooter">
+        <p>copylight ©　tech i.s,inc</p>
+    </footer>
 </body>
 </html>
